[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"

# Each problem gets its own binary

[[bin]]
name = "io"
path = "src/io.rs"

[[bin]]
name = "d5p1"
path = "src/d5p1.rs"

[[bin]]
name = "d5p2"
path = "src/d5p2.rs"

[[bin]]
name = "d6p1"
path = "src/d6p1.rs"

[[bin]]
name = "d6p2"
path = "src/d6p2.rs"

[[bin]]
name = "d7p1"
path = "src/d7p1.rs"

[[bin]]
name = "d7p2"
path = "src/d7p2.rs"

[[bin]]
name = "d8p1"
path = "src/d8p1.rs"

[[bin]]
name = "d8p2"
path = "src/d8p2.rs"

[[bin]]
name = "d9p1"
path = "src/d9p1.rs"

[[bin]]
name = "d9p2"
path = "src/d9p2.rs"

[[bin]]
name = "d10p1"
path = "src/d10p1.rs"

[[bin]]
name = "d10p2"
path = "src/d10p2.rs"
